CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

PROJECT(ClosestPoint)

SET(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(Boost COMPONENTS program_options unit_test_framework REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/libs/eigen)

INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_SUPPORTS_MARCH_NATIVE)
IF(COMPILER_SUPPORTS_MARCH_NATIVE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native")
ENDIF()

ADD_EXECUTABLE(randomQueries
    src/randomQueries.cpp
    src/ProgramOptions.cpp
)
TARGET_LINK_LIBRARIES(randomQueries
    ${Boost_LIBRARIES}
)

ADD_EXECUTABLE(query
    src/query.cpp
    src/ProgramOptions.cpp
)
TARGET_LINK_LIBRARIES(query
    ${Boost_LIBRARIES}
)

IF(UNIX)
  ADD_CUSTOM_TARGET(shapeSymLink ALL
    COMMAND ${CMAKE_COMMAND} -E create_symlink ${CMAKE_SOURCE_DIR}/shapes ${CMAKE_BINARY_DIR}/shapes)
ENDIF(UNIX)

IF(WIN32)
  FILE(COPY ${CMAKE_SOURCE_DIR}/shapes DESTINATION ${CMAKE_BINARY_DIR})
ENDIF(WIN32)

ENABLE_TESTING()
ADD_SUBDIRECTORY(tests)
