SET(TEST_SOURCES
  test_hypersphere_intersection.cpp
  test_random_queries.cpp
  test_OBJ.cpp)

FOREACH(SOURCE_FILE ${TEST_SOURCES})
  STRING(REPLACE ".cpp" "" SOURCE_NAME ${SOURCE_FILE})
  ADD_EXECUTABLE(${SOURCE_NAME}
    ${SOURCE_FILE})
  TARGET_COMPILE_DEFINITIONS(${SOURCE_NAME} PRIVATE "BOOST_TEST_DYN_LINK=1")
  TARGET_LINK_LIBRARIES(${SOURCE_NAME}
    ${Boost_LIBRARIES}
    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
  )
  STRING(REPLACE "test_" "" TEST_NAME ${SOURCE_NAME})
  ADD_TEST(${TEST_NAME} ${SOURCE_NAME})
ENDFOREACH(SOURCE_FILE ${TEST_SOURCES})
